--- a/index.html
+++ b/index.html
@@ -29,6 +29,21 @@
          </div>
       </div>
    </section>
+   <section class="about-me">
+      <div class="container">
+         <div class="half-width">
+            <img src="images/Person-Image.png" alt="Person image">
+         </div>
+         <div class="half-width">
+            <h2>About Me</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Condimentum diam orci pretium a pharetra,
+               feugiat cursus. Dictumst risus, sem egestas odio cras adipiscing vulputate. Nisi, risus in suscipit non.
+               Non commodo volutpat, pharetra, vel.</p>
+            <a href="#" target="_blank">Contact Me</a>
+         </div>
+
+      </div>
+   </section>
 </body>
 
 </html>
