my-recipies-added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet">
    <link rel="stylesheet" href="style.css">
 </head>
 
@@ -41,7 +42,27 @@
                Non commodo volutpat, pharetra, vel.</p>
             <a href="#" target="_blank">Contact Me</a>
          </div>
-
+      </div>
+   </section>
+   <section class="my-recipies">
+      <div class="recipies-title">
+         <h2>My recipies</h2>
+         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's standard dummy text ever since the 1500s.</p>
+      </div>
+      <div class="container">
+         <div class="half-width">
+            <img src="images/Project Cover.jpg" alt="Food">
+            <h3>Recipie Title</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+               industry's standard dummy text ever since the 1500s.</p>
+         </div>
+         <div class="half-width">
+            <img src="images/Project Cover.png" alt="Food">
+            <h3>Recipie Title</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+               industry's standard dummy text ever since the 1500s.</p>
+         </div>
       </div>
    </section>
 </body>
