--- a/index.html
+++ b/index.html
@@ -65,6 +65,24 @@
          </div>
       </div>
    </section>
+   <section class="countdown">
+      <div class="container">
+         <div class="count">
+            <div class="one-third-width">
+               <h2>700k</h2>
+               <p>Youtube Subscribers</p>
+            </div>
+            <div class="one-third-width">
+               <h2>2.4m</h2>
+               <p>Instagram Followers</p>
+            </div>
+            <div class="one-third-width">
+               <h2>100k</h2>
+               <p>Dribbble Shot Likes</p>
+            </div>
+         </div>
+      </div>
+   </section>
 </body>
 
 </html>
