--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
          </div>
       </div>
    </section>
+   <footer>
+      <div class="container">
+         <div class="footer-content">
+            <h3><span>Eat</span> Fresh</h3>
+            <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+         </div>
+      </div>
+   </footer>
 </body>
 
 </html>
